--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>The Future of Data Science is Here</h1>
         <p>Sifra AI automates data science workflows using AI-powered code generation, NLP, and real-time execution.</p>
         <div class="hero-buttons">
-            <a href="#get-started" class="get-started-btn">Get Started</a>
+            <a href="pages/code-generator.html" class="get-started-btn">Get Started</a>
             <a href="#demo" class="demo-btn">Watch Demo</a>
         </div>
     </section>
